# open-qqfarm

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  start.bat
.github/workflows/: pypi-publish.yml
src/open_qqfarm/: __init__.py  cli.py  config.py  core.py  default_config.json  models.py
src/open_qqfarm/dashboard/: __init__.py  server.py
src/open_qqfarm/dashboard/assets/css/: page.css
src/open_qqfarm/dashboard/assets/js/: i18n.js  page.js
src/open_qqfarm/dashboard/assets/js/shared/: http.js  page-auth.js  page-automation-panel.js  page-config-panel.js  page-context.js  page-farm-actions.js  (+11 more)
src/open_qqfarm/dashboard/templates/: page.html
src/open_qqfarm/game_data/: role_level.json
src/open_qqfarm/proto/: __init__.py  __init__.pyi  corepb_pb2.py  corepb_pb2.pyi  friendpb_pb2.py  friendpb_pb2.pyi  game_pb2.py  game_pb2.pyi  itempb_pb2.py  itempb_pb2.pyi  notifypb_pb2.py  notifypb_pb2.pyi  plantpb_pb2.py  plantpb_pb2.pyi  shoppb_pb2.py  shoppb_pb2.pyi  taskpb_pb2.py  taskpb_pb2.pyi  userpb_pb2.py  userpb_pb2.pyi  visitpb_pb2.py  visitpb_pb2.pyi
src/open_qqfarm/services/: __init__.py  account_service.py  automation_service.py  farm_service.py  friend_farm_service.py  friend_service.py  game_data_service.py  land_service.py  log_service.py  login_service.py  notify_service.py  operation_limit_service.py  statistics_service.py  task_reward_service.py  warehouse_service.py
src/open_qqfarm/session/: __init__.py  gate_codec.py  gateway.py  gateway_game.py  notify_dispatcher.py
tests/: test_gold_accounting.py  test_package_basics.py
